--- a/src/app/pages/movie/movie.component.css
+++ b/src/app/pages/movie/movie.component.css
@@ -76,6 +76,10 @@
     row-gap: 10px;
 }
 
+.movie__footer {
+    padding: 10px;
+}
+
 @media only screen and (min-width: 768px) {
     .row--grid {
         grid-template-columns: repeat(2, 1fr);
@@ -104,5 +108,9 @@
 
     .movie__raiting--desktop {
         display: block;
+    }
+
+    .movie__footer {
+        padding: 20px;
     }
 }
